--- a/sales.html
+++ b/sales.html
@@ -8,6 +8,14 @@
   <body>
     <h1>1st and Pike</h1>
       <ul id="pike"></ul>
+    <h1>SeaTac Airport</h1>
+      <ul id="seatac"></ul>
+    <h1>Seattle Center</h1>
+      <ul id="seattlec"></ul>
+    <h1>Capitol Hill</h1>
+      <ul id="caphill"></ul>
+    <h1>Alki</h1>
+      <ul id="alki"></ul>
   <script src="app.js"></script>
   </body>
 </html>
