index/small-edit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="StyleSheet" type="text/css" href="style.css">
-    <title></title>
+    <title>Salmon Cookie's</title>
   </head>
   <body>
+    <img src="salmon.png" alt="salmon">
+    <h1>Coming Soon!</h1>
   <script></script>
   </body>
 </html>
