working on table

--- a/sales.html
+++ b/sales.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="StyleSheet" type="text/css" href="style.css">
-    <title></title>
+    <title>sales</title>
   </head>
   <body>
-  
+    <h1>table</h1>
+    <table id="sales">
+    </table>
+
+  <script src="app.js"></script>
   </body>
 </html>
