--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Cookie Guru</h1>
-    <form>
+    <form id="storeForm">
       <fieldset>
         <legend>Add New Store</legend>
 
