--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="StyleSheet" type="text/css" href="style.css">
+    <!-- <link rel="StyleSheet" type="text/css" href="style.css"> -->
     <title>Salmon Cookie's</title>
   </head>
   <body>
