--- a/sales.html
+++ b/sales.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="StyleSheet" type="text/css" href="style.css">
     <title>sales</title>
   </head>
   <body>
-    <h1>Cookie Guru</h1>
+    <h1 id="logo">Cookie Guru</h1>
     <form id="storeForm">
       <fieldset>
         <legend>Add New Store</legend>
@@ -29,7 +30,7 @@
       </fieldset>
     </form>
 
-    <h1>table</h1>
+    <h1 id="cookieSales">Cookie Sales..</h1>
     <table id="sales">
     </table>
 
