--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="home-style.css">
     <meta charset="utf-8">
     <!-- <link rel="StyleSheet" type="text/css" href="style.css"> -->
     <title>Salmon Cookie's</title>
   </head>
   <body>
-    <img src="salmon.png" alt="salmon">
-    <h1>Coming Soon!</h1>
-  <script></script>
+    <header>
+    <nav class="inner">
+      <img src="photo/200-70.png">
+      <ul>
+        <li>Pike Place</li>
+         <li>Alki</li>
+         <li>Cap Hill</li>
+         <li>Seattle Center</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img class="banner" src="photo/fam.png">
+    <ul class="sub_banner">
+      <li id="li_right"><img src="photo/fish.jpg"></li>
+      <li id="li_block"><img src="photo/frosted-cookie.jpg"></li>
+      <li id="li_left"><img src="photo/cuttter.jpg"></li>
+    </ul>
+    <section class="featured_section">
+      <img class="featured" src="photo/shirt.jpg">
+  <!--   </section> -->
+    <article class="right">
+      <h2>Swag</h2>
+      <p>Now you can get your fins on this supper awesome Salmon Cookie shirt! Its not made out of fish..we swear its 100% cotton.
+  </p>
+      <button id="button">Buy Now</button>
+    </article>
+    </section>
+
+  </main>
+  <footer>
+  </footer>
+
+
   </body>
 </html>
